k8s/base/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  labels:
    app.kubernetes.io/name: worker
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: worker
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
      containers:
        - name: worker
          image: ghcr.io/REPLACE_OWNER/notes-worker:latest
          livenessProbe:
            exec:
              command: ["python", "-c", "import socket,os; s=socket.socket(); s.settimeout(2); s.connect((os.environ['REDIS_HOST'], int(os.environ['REDIS_PORT']))); s.close()"]
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            exec:
              command: ["python", "-c", "import socket,os; s=socket.socket(); s.settimeout(2); s.connect((os.environ['REDIS_HOST'], int(os.environ['REDIS_PORT']))); s.close()"]
            initialDelaySeconds: 3
            periodSeconds: 10
          resources:
            requests:
              cpu: "20m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "192Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
